# linux-whisper

./: .gitignore  CLAUDE.md  LICENSE  README.md  architecture.md  pyproject.toml  vision.md
.claude/skills/catchup/: SKILL.md
.claude/skills/draft-issue/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/implement-address/: SKILL.md
.claude/skills/implement-code/: SKILL.md
.claude/skills/implement-plan/: SKILL.md
.claude/skills/merge-pr/: SKILL.md
.claude/skills/mine-for-ideas/: SKILL.md
.claude/skills/pr-check/: SKILL.md
.github/workflows/: ci.yml
src/linux_whisper/: __init__.py  __main__.py  _entry.py  app.py  audio.py  cli.py  config.py  focus.py  hotkey.py  overlay.py  snippets.py  state.py  tray.py
src/linux_whisper/inject/: __init__.py  injector.py
src/linux_whisper/polish/: __init__.py  disfluency.py  formatting.py  llm.py  pipeline.py  punctuation.py
src/linux_whisper/stt/: __init__.py  engine.py  faster_whisper.py  moonshine.py  whisper_cpp.py  whisper_gpu.py  whisper_gpu_worker.py
tests/: conftest.py  test_app.py  test_audio.py  test_cli.py  test_config.py  test_focus.py  test_hotkey.py  test_inject.py  test_polish.py  test_snippets.py  test_state.py  test_stt.py
